[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snappy"
version = "0.1.0"
description = "Run Python scripts with 'pyr script.py' instead of 'python script.py'"
authors = [
  { name="Ganu Reddy", email="ganureddy54@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[project.scripts]
pyr = "snappy.cli:main"
